Tue Feb 22 15:03:46 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/Foundation/NSPort.h: Fixed typo: changed `@class
	NSArray` to `@class NSMutableArray` to make it compile.

Tue Feb 22 07:31:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gdomap.c: Reinstated '-p' flag to disable probes and added
	code to do probes by broadcast to the local network rather than by
	probing machines individually if possible.

2000-02-20  Matthias Klose  <doko@cs.tu-berlin.de>

	* Tools/gdomap.c (main): Add -I <file> option to write the pid to.

Mon Feb 21 13:44:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRunLoop.m: Use sel_eq() for selector comparison so that
	we are guaranteed to match correctly when removing actions from the
	runloop.

Fri Feb  6 14:54:00 2000  Manuel Guesdon <mguesdon@sbuilders.com>

	* Source/NSCalendarDate.m: handle nil and empry string in 
		-initWithString:calendarFormat:locale:
	* ChangeLog: Replace 1999 by 2000 for last modifications :-)

Fri Feb  4 17:20:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPortNameServer.m: New methods for use by NSConnection
	* Foundation/NSPortNameServer.h: ditto
	* Source/NSConnection.m: Tidied a little and added ([-registerName:])
	* Source/NSConnection.h: ditto

2000-02-17  Adam Fedor  <fedor@gnu.org>

	* Version: 0.6.5 released.

2000-02-16  Adam Fedor  <fedor@gnu.org>

	* gnustep-base.spec: Newfile

Wed Feb 16 06:28:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAssertionHandler.m: Applied patch by David relson to change
	output format for function assertions, fixed error in format string,
	 and made similar changes for method assertions.

2000-02-14  Adam Fedor  <fedor@gnu.org>

	* Version: Update version number
	* Documentation/announce.tmpl.texi: Update
	* Documentation/readme.tmpl.texi: Likewise.
	* Documentation/news.tmpl.texi: Likewise.
	* Documentation/todo.tmpl.texi: Likewise.