@@ -1,3 +1,7 @@
+Thu Feb 24 08:30:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSUser.m: NSOpenStepRootDirectory() use GNUSTEP_ROOT
+
 Tue Feb 22 15:03:46 2000  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Headers/Foundation/NSPort.h: Fixed typo: changed `@class
